added new dashboard page, intergrated with ngx charts, completed side nav bar and added link to dashboard, added new services and interfaces to handle dashboard metrics

--- a/IdentityAdminPortal/src/styles.css
+++ b/IdentityAdminPortal/src/styles.css
@@ -13,3 +13,10 @@ body {
 h1, h2 {
   font-weight: normal;
 }
+
+li {
+  list-style-type: none;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
