--- a/IdentityAdminPortal/src/app/pages/login/login.component.css
+++ b/IdentityAdminPortal/src/app/pages/login/login.component.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: #4682B4
+  background-color: #3f51b5;
 }
 
 .login-form {
