Added api-error interceptor, adjusted all file comments to be under import statements, created new enums for http codes and error routes, updated api version to be cincluded in env files

--- a/IdentityAdminPortal/src/app/pages/page-not-found/page-not-found.component.html
+++ b/IdentityAdminPortal/src/app/pages/page-not-found/page-not-found.component.html
@@ -1,5 +1,6 @@
 <div class="page-container">
   <div class="content">
+    <span class="icon material-icons">place</span>
     <h1>404 Page Not Found</h1>
     <h2>Sorry, this page isn't available.</h2>
     <p>
