--- a/IdentityAdminPortal/src/app/features/unauthorized/unauthorized.component.css
+++ b/IdentityAdminPortal/src/app/features/unauthorized/unauthorized.component.css
@@ -11,7 +11,7 @@
   padding: 3rem 4rem;
   background: #fff;
   border-radius: 12px;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   max-width: 700px;
   width: 100%;
 }
@@ -41,7 +41,7 @@ a:hover {
 }
 
 .icon {
-  color:#f57c00;
+  color: #f57c00;
   font-size: 80px;
   margin-bottom: 1.5rem;
 }
