--- a/IdentityAdminPortal/src/styles.css
+++ b/IdentityAdminPortal/src/styles.css
@@ -1,16 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
-html, body {
-  margin: 0;
+html,
+body {
   padding: 0;
+  margin: 0;
 }
 
 body {
   font-family: 'Inter', sans-serif;
 }
 
-h1, h2 {
+h1,
+h2 {
   font-weight: normal;
 }
 
