Created validator service for paramter validation in services, added audit logs list option to nav and can select logs and see details

--- a/IdentityAdminPortal/src/app/shared/components/side-nav/side-nav.component.html
+++ b/IdentityAdminPortal/src/app/shared/components/side-nav/side-nav.component.html
@@ -6,5 +6,11 @@
         <span class="label">Dashboards</span>
       </a>
     </li>
+    <li>
+      <a [routerLink]="auditLogRoute">
+        <span class="icon material-icons">history</span>
+        <span class="label">Audit Logs</span>
+      </a>
+    </li>
   </ul>
 </div>
