--- a/IdentityAdminPortal/src/app/shared/components/side-nav/side-nav.component.html
+++ b/IdentityAdminPortal/src/app/shared/components/side-nav/side-nav.component.html
@@ -7,6 +7,12 @@
       </a>
     </li>
     <li>
+      <a [routerLink]="usersRoute">
+        <span class="icon material-icons">group</span>
+        <span class="label">Users</span>
+      </a>
+    </li>
+    <li>
       <a [routerLink]="auditLogRoute">
         <span class="icon material-icons">history</span>
         <span class="label">Audit Logs</span>
