adjusted user list to disable admin/super admin accounts for when a admin si currently logged in.

--- a/IdentityAdminPortal/src/app/features/users/users.component.css
+++ b/IdentityAdminPortal/src/app/features/users/users.component.css
@@ -2,3 +2,9 @@
   margin-top: 10px;
   background-color: transparent;
 }
+
+button:disabled {
+  background-color: #ccc;
+  color: #888;
+  cursor: not-allowed;
+}
